--- a/styles/version-control.css
+++ b/styles/version-control.css
@@ -7,38 +7,46 @@ html {
 }
 
 body {
-    background-color: #fffcf9;
+    background-color: #eba764;
     margin: 0;
     min-height: 100%;
 }
 
 .header {
-    background-color: #26547c;
+    background-color: rgb(122, 90, 122);
     padding: 24px;
+    border-radius: 15px;
+    margin: 10px;
 }
 
 .header__page-title {
-    color: #fff;
+    color: lightgreen;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0;
+    margin: 10px;
     text-align: center;
+    border-radius: 15px;
+    padding:5px;
 }
 
 .git-commands {
     margin: 24px;
     display: grid;
-    gap: 16px;
+    gap: 10px;
     grid-template: repeat(6, 1fr) / 1fr 3fr;
+
 }
 
 .git-commands__command {
     background-color: #06d6a0;
     padding: 16px;
     font-size: 2rem;
+    border-radius: 15px;
 }
 
 .git-commands__effect {
-    background-color: #ef476f;
+    background-color: lightblue;
     padding: 16px;
     font-size: 1.5rem;
+    border-radius: 15px;
+    margin: 10px;
 }
